# kastrix-project-manager

./: .eslintrc.json  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  REVIEW.md  build-tauri-release.bat  build.bat  debug-compare-dev.bat  debug-compare-exe.bat  dev-debug.bat  dev.bat  explain-dev-vs-exe-paths.bat  explain-dev-vs-exe-paths.ja.txt  fetch_readmes.bat  github-repos-report.md  null  package-lock.json  package.json  record-launch-context.bat  sample.txt
.github/workflows/: ci.yml  release.yml
agent_docs/: debugging.md  ide-launch-investigation.md  iroh_secret_persist.md  refactoring.md  team_feature.md  ui.md  workflow.md
mockup/: .gitkeep  README.md  index.html  team-feature.html  team-ui-refined.html
mockup/bak/: app.js  project-dashboard.html
mockup/js/: index.js  main.js  projects.js  sidebar.js  state.js  tabs.js  tasks.js  views.js
plans/: .gitkeep  code-quality-improvement-plan.md  code-quality-improvement.md  file-split-design.md  implementation-guide.md  implementation-status.md  large-scale-refactoring-plan.md  modal_conflict_ux_plan.md  ui-js-refactor-debt-checklist.md
sample/: kastrix_fixed-40.html
scripts/windows/: build-tauri-release.bat  build.bat  debug-compare-dev.bat  debug-compare-exe.bat  dev-debug.bat  dev.bat  explain-dev-vs-exe-paths.bat  explain-dev-vs-exe-paths.ja.txt  record-launch-context.bat
specs/: .gitkeep  kastrix_team_design.md  specification.md  team_host_exit_spec.md
src/: .gitkeep
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  db.rs  git_util.rs  lang_detect.rs  lib.rs  main.rs  models.rs  ntp_util.rs  watcher.rs
src-tauri/src/commands/: ai.rs  logs.rs  mod.rs  projects.rs  settings.rs  tasks.rs  team.rs
src-tauri/src/commands/team/: invite.rs  leave.rs  members.rs  mod.rs  update_name.rs
src-tauri/src/team/: broadcast.rs  event_handler.rs  helpers.rs  invite_code.rs  iroh_node.rs  mod.rs  payloads.rs  pending.rs  pending_db.rs  pending_invite_preview.rs  task_sync.rs
ui/: index.html
ui/data/: dummy.js
ui/js/: ai-chat.js  analytics.js  api.js  conflict.js  constants.js  data.js  events.js  inbox.js  init.js  main.js  markdown.js  projects.js  settings.js  settings_ai.js  settings_ide.js  settings_team.js  sidebar.js  state.js  (+4 more)
(+7 files in other folders)
