[package]
name = "kastrix"
version = "0.1.0"
description = "Kastrix - Project Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "kastrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
git2 = "0.19"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "apple-native"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
opt-level = "s"
lto = true
