[package]
name = "kastrix"
version = "0.1.0"
description = "Kastrix - Project Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "kastrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
git2 = "0.19"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "apple-native"] }
tokio = { version = "1", features = ["full"] }
opener = "0.7"
rand = "0.9"
hex = "0.4"
# iroh: Tauri の windows 0.61 に合わせて 0.92 を使用（netwatch 0.9 → windows 0.61）
iroh = { version = "0.92", default-features = false, features = ["discovery-pkarr-dht"] }
iroh-base = "0.92"
iroh-gossip = { version = "0.92", default-features = false, features = ["net"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
opt-level = "s"
lto = true
